{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 139,
  "lineage": "df3106c8-a4ea-4e4e-abb3-183127035abe",
  "resources": [
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267083060:security-group/sg-0507497a95a0ba2dc",
            "description": "Allow inbound traffic for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0507497a95a0ba2dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "myrecipebook-rds-sg",
            "name_prefix": "",
            "owner_id": "533267083060",
            "revoke_rules_on_delete": false,
            "tags": {
              "IAC": "True",
              "Name": "myrecipebook-rds-sg"
            },
            "tags_all": {
              "IAC": "True",
              "Name": "myrecipebook-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f364eddb52a5c97"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.admin",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267083060:internet-gateway/igw-0e4591a497d51788d",
            "id": "igw-0e4591a497d51788d",
            "owner_id": "533267083060",
            "tags": {
              "IAC": "True",
              "Name": "myrecipebook-igw"
            },
            "tags_all": {
              "IAC": "True",
              "Name": "myrecipebook-igw"
            },
            "vpc_id": "vpc-07f364eddb52a5c97"
          },
          "dependencies": [
            "data.terraform_remote_state.admin",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267083060:route-table/rtb-0f2d41b76bb73ec28",
            "id": "rtb-0f2d41b76bb73ec28",
            "owner_id": "533267083060",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e4591a497d51788d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "IAC": "True",
              "Name": "myrecipebook-rtb"
            },
            "tags_all": {
              "IAC": "True",
              "Name": "myrecipebook-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f364eddb52a5c97"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.admin",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aad8e8b9d8b2fe3b",
            "route_table_id": "rtb-0f2d41b76bb73ec28",
            "subnet_id": "subnet-0c46f2c29ae1e3e8d"
          },
          "dependencies": [
            "data.terraform_remote_state.admin",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.rtb",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0915d071520573a19",
            "route_table_id": "rtb-0f2d41b76bb73ec28",
            "subnet_id": "subnet-0bd78b3ae41e5bfa0"
          },
          "dependencies": [
            "data.terraform_remote_state.admin",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.rtb",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267083060:subnet/subnet-0c46f2c29ae1e3e8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c46f2c29ae1e3e8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267083060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "IAC": "True",
              "Name": "myrecipebook-subnet-0",
              "VPC": "vpc-07f364eddb52a5c97"
            },
            "tags_all": {
              "IAC": "True",
              "Name": "myrecipebook-subnet-0",
              "VPC": "vpc-07f364eddb52a5c97"
            },
            "vpc_id": "vpc-07f364eddb52a5c97"
          },
          "dependencies": [
            "data.terraform_remote_state.admin",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267083060:subnet/subnet-0bd78b3ae41e5bfa0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd78b3ae41e5bfa0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267083060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "IAC": "True",
              "Name": "myrecipebook-subnet-1",
              "VPC": "vpc-07f364eddb52a5c97"
            },
            "tags_all": {
              "IAC": "True",
              "Name": "myrecipebook-subnet-1",
              "VPC": "vpc-07f364eddb52a5c97"
            },
            "vpc_id": "vpc-07f364eddb52a5c97"
          },
          "dependencies": [
            "data.terraform_remote_state.admin",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267083060:vpc/vpc-07f364eddb52a5c97",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_route_table_id": "rtb-03faa79732481769a",
            "default_security_group_id": "sg-09a6832a9facc9df0",
            "dhcp_options_id": "dopt-09d383c6c7a878fa7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07f364eddb52a5c97",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03faa79732481769a",
            "owner_id": "533267083060",
            "tags": {
              "IAC": "True",
              "Name": "myrecipebook-vpc"
            },
            "tags_all": {
              "IAC": "True",
              "Name": "myrecipebook-vpc"
            }
          },
          "dependencies": [
            "data.terraform_remote_state.admin"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}